# ncdump-json

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README  README.md  cmake_install.cmake  compile_ncdump.sh  dumplib.c  indent.c  install_manifest.txt  ncdump-json  ncdump.c  ncdump.h  r_compile_ncdump.sh  socib-buoy.nc  vardata.c  vardata.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: CMakeLists.txt  config.h  dumplib.c  dumplib.h  indent.c  ncdump.c  vardata.c
tests/: README  opendap_test.sh  run_tests.sh  socib-buoy.nc
